change value in selection start

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   </head>
   <body>
     <nav class="menu-ui" id="menu-ui">
-      <a href="#" class="toggle-layer" data-mapid="suburb">Seafloor Classification</a>
+      <a href="#" class="toggle-layer"></a>
     </nav>
-
     <div id="map">
-      <div id="popup" class="ol-popup">
+      <!-- <div id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
         <div id="popup-content"></div>
-      </div>
+      </div> -->
     </div>
     <script type="module" src="./main.js"></script>
   </body>
