--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Paua Demo Service</title>
   </head>
   <body>
-    <nav class="menu-ui" id="menu-ui">
-      <a href="#" class="toggle-layer"></a>
-    </nav>
+    <div class="menu-ui" id="menu-ui">
+      <div class="seafloor" id="seafloor">
+        <a href="#" class="toggle-layer">Seafloor Classification</a>
+      </div>
+      <div id="selectDiv"></div>
+    </div>
+    
     <div id="map">
       <!-- <div id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
