grab selection name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="seafloor" id="seafloor">
         <a href="#" class="toggle-layer">Seafloor Classification</a>
       </div>
-      <div id="selectDiv"></div>
+      <div class="selectDiv" id="selectDiv"></div>
     </div>
     
     <div id="map">
