--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div>
     
     <div id="map">
-      <!-- <div id="popup" class="ol-popup">
+      <div id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
         <div id="popup-content"></div>
-      </div> -->
+      </div>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
