add opacity control

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="#" class="toggle-layer">Seafloor Classification</a>
       </div>
       <div class="selectDiv" id="selectDiv"></div>
+      <div><label id="cogOpacity"></label></div>
     </div>
     
     <div id="map">
